# MAI_Labs

./: README.md  task.sh  Отчет.md
1 semester/S1L1 - Bash/: task.sh
1 semester/S1L3 - Turing diagram/: Отчет.md
2 semester/S2L1 - Bash/: dir_travel.sh  Отчет.md
2 semester/S2L2 - C Trees/code/: CMakeLists.txt  btree.h  main.c
2 semester/S2L3 - Databases/: CMakeLists.txt  desktop.ini  execute.c  generate.c  input.txt  io.c  print.c  бд.md
2 semester/S2L3 - Databases/headers/: io.h  pc.h
2 semester/S2L4 - Linear Lists/: CMakeLists.txt  desktop.ini  main.c  линейные списки.md
2 semester/S2L5 - Deck/: CMakeLists.txt  deck.c  deck.h  desktop.ini  main.c  sort.c  sort.h  дэк.md
2 semester/S2L6 - Tables/: CMakeLists.txt  desktop.ini  main.c  song.txt  дин.массив.md
2 semester/S2L6 - Tables/key_functions/: keys.c  keys.h
2 semester/S2L6 - Tables/lab_staff/: utils.c  (+1 more)
2 semester/S2L7 - Expression trees/: CMakeLists.txt  desktop.ini  exp_stack.c  main.c  postfix.c  stack.c  tree.c  utils.c  деревья_отчет.md
2 semester/S2L7 - Expression trees/headers/: exp_stack.h  postfix.h  stack.h  tree.h  utils.h
Lab2/: turing.txt  отчет.md
Lab3/: Отчет.md
Lab4/: rules2.txt  Отчет.md
Lab5/: main.c  report.md
Lab6/: main.c  Отчет.md
Lab7/: main.c  Отчет7.md
S1L1 - Bash/: Отчет.md
S1L3 - Turing diagram/: Lab3.jdtp
S1L4 - HAM/: Отчет.md
S1L5 - Easy C/: report.md
S1L6 - Finite machine/: main.c  test.txt  Отчет.md
S1L8 - C matrix/: main.c  test.txt  ОтчетКА (1).md
S2L1 - Bash/: dir_travel.sh
S2L2 - C Trees/: Отчет.md
S2L2 - C Trees/code/: btree.c
(+2 files in other folders)
